--- a/office codes.Rmd
+++ b/office codes.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Marketing Analytics Report"
-subtitle: "Project 3"
+title: "Marketing Analytics "
+subtitle: "Analysis"
 output:
   html_document:
     self-contained : yes
